# Chewman-Vulkan

./: .gitignore  .travis.yml  CMakeLists.txt  DesktopFS.cpp  DesktopFS.h  LICENSE.md  README.md  Renderer.cpp  Renderer.h  VulkanHeaders.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
Game/: BlockMeshGenerator.cpp  BlockMeshGenerator.h  Coin.h  Game.cpp  Game.h  GameDefs.h  GameMap.cpp  GameMap.h  GameMapLoader.cpp  GameMapLoader.h  GameRulesProcessor.cpp  GameRulesProcessor.h  GameSettings.cpp  GameSettings.h  GameSoundsManager.cpp  GameSoundsManager.h  GameUtils.cpp  GameUtils.h  Gargoyle.h  GraphicsSettings.cpp  GraphicsSettings.h  IGameMapService.h  LocaleManager.cpp  LocaleManager.h  MapTraveller.cpp  MapTraveller.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  ProgressManager.cpp  ProgressManager.h  ScoresManager.cpp  ScoresManager.h  SoundSystem.h  SoundSystemDesktop.cpp  StateProcessor.cpp  StateProcessor.h  StaticObject.cpp  StaticObject.h  (+5 more)
Game/Controls/: BoxSliderControl.cpp  BoxSliderControl.h  ButtonControl.cpp  ButtonControl.h  ContainerControl.cpp  ContainerControl.h  Control.cpp  Control.h  ControlDocument.cpp  ControlDocument.h  ControlFactory.cpp  ControlFactory.h  DropDownControl.cpp  DropDownControl.h  IEventHandler.h  ImageControl.cpp  ImageControl.h  LabelControl.cpp  LabelControl.h  LevelButtonControl.cpp  LevelButtonControl.h  PanelControl.cpp  PanelControl.h  SliderControl.cpp  SliderControl.h
Game/Enemies/: Enemy.cpp  Enemy.h  EnemyAI.h  Nun.cpp  Nun.h  RandomWalkerAI.cpp  RandomWalkerAI.h
Game/Level/: BlockMeshGenerator.cpp  BlockMeshGenerator.h  Bomb.cpp  Bomb.h  BombFireEntity.h  CustomEntity.h  EatEffectManager.cpp  EatEffectManager.h  FireLineEntity.cpp  FireLineEntity.h  FireballEntity.h  GameMap.cpp  GameMap.h  GameMapDefs.h  GameMapLoader.cpp  GameMapLoader.h  GameRulesProcessor.cpp  GameRulesProcessor.h  GameUtils.cpp  GameUtils.h  Gargoyle.h  LevelStateProcessor.cpp  LevelStateProcessor.h  MagicEntity.h  MapTraveller.cpp  MapTraveller.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  StaticObject.cpp  StaticObject.h  Teleport.h
Game/Menu/: CreditsStateProcessor.cpp  CreditsStateProcessor.h  GraphicsStateProcessor.cpp  GraphicsStateProcessor.h  HighScoresStateProcessor.cpp  HighScoresStateProcessor.h  LevelSelectionStateProcessor.cpp  LevelSelectionStateProcessor.h  MapStateProcessor.cpp  MapStateProcessor.h  MenuStateProcessor.cpp  MenuStateProcessor.h  PauseStateProcessor.cpp  PauseStateProcessor.h  ReviveStateProcessor.cpp  ReviveStateProcessor.h  ScoreStateProcessor.cpp  ScoreStateProcessor.h  SettingsStateProcessor.cpp  SettingsStateProcessor.h  TutorialStateProcessor.cpp  TutorialStateProcessor.h  WorldSelectionStateProcessor.cpp  WorldSelectionStateProcessor.h
SVE/: CameraNode.cpp  CameraNode.h  CameraSettings.cpp  CameraSettings.h  ComputeEntity.cpp  ComputeEntity.h  ComputeSettings.cpp  ComputeSettings.h  Engine.cpp  Engine.h  EngineSettings.cpp  EngineSettings.h  Entity.cpp  Entity.h  FileSystem.h  FontManager.cpp  FontManager.h  Libs.h  LightManager.cpp  LightManager.h  LightNode.cpp  LightNode.h  LightSettings.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MaterialSettings.cpp  MaterialSettings.h  Mesh.cpp  Mesh.h  MeshDefs.h  MeshEntity.cpp  MeshEntity.h  MeshManager.cpp  MeshManager.h  MeshSettings.cpp  MeshSettings.h  OverlayEntity.cpp  OverlayEntity.h  (+74 more)
android/: SymbolicLinks.txt  build.gradle
android/app/: .gitignore  build.gradle  proguard-rules.pro
resources/: Disappear.particle  blueTrashman.material  bomb.particle  bombSmoke.particle  disappear.particle  fire.particle  fireball.particle  fireline.particle  flatten.py  floor.material  frostball.particle  frostline.particle  goldDust.particle  light0.light  light1.light  light2.light  main.engine  phongBonesVert.shader  phongFrag.shader  phongShadowFrag.shader  phongShadowVert.shader  phongVert.shader  powerUp.particle  shadowMapRenderFrag.shader  simpleDepth.material  simpleDepthFrag.shader  simpleDepthVert.shader  simpleSkeletalDepth.material  simpleSkeletalDepthVert.shader  skeletonFrag.shader  skeletonVert.shader  skyboxFrag.shader  skyboxVert.shader  teethSmoke.particle  teleportStars.particle  trashman.mesh  witchTeleport.particle  yellowTrashman.material
resources/fonts/: Helvetica.font  NordBold.font  convertFont.py  helvetica.font
resources/loadingScreen/: overlayColorFrag.shader  overlayFrag.shader  overlayVert.shader  quadFrag.shader  quadRender.material  quadVert.shader
resources/manual/: chew.css  readme.html
resources/materials/: FrostLineParticle.material  acceleration.material  acid.material  acidSimple.material  angel.material  angelBlink.material  angelWings.material  blueBurnTrashman.material  blueTrashmanBlink.material  bomb.material  bombFire.material  ceiling.material  ceilingNormals.material  coin.material  coinSimple.material  debuff.material  dragon.material  effectBloom.material  effectBlurAll.material  effectGrayscale.material  effectHBlur.material  effectOnlyBright.material  effectPencil.material  effectSmoke.material  effectSmokeNA.material  effectVBlur.material  fireGargoyle.material  fireLine.material  fireLineParticle.material  fireball.material  floor.material  floorNormals.material  floorParallax.material  freeze.material  frostGargoyle.material  frostLine.material  frostLineParticle.material  frostball.material  fullSkeletalDepth.material  gem.material  (+63 more)
resources/models/: acceleration.mesh  angel.mesh  angelWings.mesh  bomb.mesh  coin.mesh  cylinder.mesh  dragon.mesh  freeze.mesh  gargoyle.mesh  gem.mesh  jackhammer.mesh  knight.mesh  knightAttack.mesh  knightCast.mesh  life.mesh  nun.mesh  pentagram.mesh  pot.mesh  spiral.mesh  sword.mesh  teeth.mesh  teleport.mesh  terrain.mesh  throat.mesh  tomb.mesh  trashman.mesh  volcano.mesh  witch.mesh  witchCast.mesh  witchCastTeleport.mesh
resources/shaders/: DebuffFrag.shader  SimpleColorFrag.shader  bombfire.shader  convert.bat  effectAcidFrag.shader  effectAppearFrag.shader  fireball.shader  (+77 more)
shaders/: convert.bat  shader.frag  shader.vert  skybox.vert
(+208 files in other folders)
